# Asteroid-GE-archive-

./: .gitignore  Asteroid-GameEngine.sln  CMakeLists.txt  CMakeSettings.json  My_GameEngine-Project.sln  README.md  關於製作Animation.txt
Asset/: icon-file.psd
Asteroid-GameEngine/: ADD_Component.cpp  ADD_Component.h  ADD_Function.cpp  ADD_Function.h  AGE_Assert.h  AGE_FileBrowser.cpp  AGE_FileBrowser.h  AGE_Mesh.cpp  AGE_Mesh.h  AGE_Model.cpp  AGE_Model.h  AGE_SkeletalMesh.cpp  AGE_SkeletalMesh.h  Actor.cpp  Actor.h  Asteroid-GameEngine.cpp  Asteroid-GameEngine.vcxproj  Asteroid-GameEngine.vcxproj.filters  Cube.cpp  GLDebugDrawer.h  GlobalSettings.xml  MainUI.cpp  MainUI.h  Pivot.h  Raycast.cpp  Raycast.h  SceneManager.cpp  SceneManager.h  Shader_List.cpp  Shader_List.h  SkeletalMesh.cpp  SkeletalMesh.h  Window.cpp  Window.h  World.cpp  World.h  assimp-vc140-mt.exp  imgui.ini  imgui_log.txt  mesh.cpp  (+2 more)
Asteroid-GameEngine/Animation/: SkeletalAnimation.cpp  SkeletalAnimation.h
Asteroid-GameEngine/Collision/: BoxCollision.cpp  BoxCollision.h
Asteroid-GameEngine/Component/: BoxCollision.cpp  BoxCollision.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  Meshrender.cpp  Meshrender.h  PointLight .cpp  PointLight.cpp  PointLight.h  Transform.cpp  Transform.h
Asteroid-GameEngine/Core/: AGE_FileSystem.h
Asteroid-GameEngine/ExampleModel/: untitled.fbx
Asteroid-GameEngine/ExampleProject/: Basic Example.AstGamEng  BasicExample.AstGamEng  Scene1.AstGamEng  Scene2.AstGamEng
Asteroid-GameEngine/GraphicEngine/: GLDebugDrawer.h  imgui.h  imgui_Custom.h  imgui_draw.cpp  imgui_impl_opengl3.cpp
Asteroid-GameEngine/Math/: Math.h
Asteroid-GameEngine/Physics Engine/: LinearMath_Debug.lib
Asteroid-GameEngine/Physics Engine/CommonInterfaces/: CommonRigidBodyBase.h
Asteroid-GameEngine/Shader/: ModelShader.fs  ModelShader.vs  ModelShader_ins.fs  ModelShader_ins.vs  SimpleDrawShader.fs  SimpleFragmentShader.fs  StandardFragmentShader.fs  StandardVertexShader.vs  lightVertexShader.vs  shadow_depth_DirLight.vs  shadow_mapping_depth.vs
Asteroid-GameEngine/Units/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  DirectionalLight.h  PointLight .cpp  PointLight.h
Asteroid-GameEngine/hide/: MainUI.cpp
Asteroid-GameEngine/x64/Debug/: vc142.idb
Asteroid-GameEngine/x64/Debug/Asteroid.5F40D860.tlog/: Asteroid-GameEngine.lastbuildstate  Asteroid-GameEngine.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
My_GameEngine-Project/: ADD_Function.cpp  ADD_Function.h  Actor.cpp  Actor.h  Camera.cpp  Camera.h  Cube.h  MainUI.cpp  MainUI.h  My_GameEngine-Project.cpp  My_GameEngine-Project.vcxproj  My_GameEngine-Project.vcxproj.filters  Window.cpp  Window.h  imgui.ini  mesh.h  model.h  test.cpp
My_GameEngine-Project/Component/: Transform.h
My_GameEngine-Project/Shader/: FragmentShader.fs  lightfragmentshader.fs
Shader/: ModelShader.vs  ModelShader_ins.vs  OutLineShader.fs  SimpleDrawShader.fs  SimpleDrawShader.vs  shadow_mapping.vs  shadow_mapping_depth.vs
lib/bullet3/examples/CommonInterfaces/: CommonRigidBodyBase.h
src/: ADD_Component.cpp  ADD_Component.hpp  AGE_FileBrowser.cpp  AGE_FileBrowser.h  AGE_FileBrowser.hpp  AGE_FileSystem.cpp  AGE_FileSystem.h  AGE_FileSystem.hpp  AGE_Mesh.cpp  AGE_Model.cpp  AGE_Model.hpp  AGE_SkeletalMesh.cpp  AGE_SkeletalMesh.hpp  Actor.cpp  Actor.hpp  Asteroid-GameEngine.cpp  BoxCollision.cpp  BoxCollision.hpp  Camera.cpp  Camera.hpp  Component.cpp  DirectionalLight.cpp  DirectionalLight.hpp  GLDebugDrawer.h  Header1.h  Meshrender.cpp  Meshrender.hpp  PointLight.cpp  PointLight.hpp  Raycast.cpp  Raycast.hpp  SceneManager.cpp  SceneManager.h  SceneManager.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.h  Window.hpp  World.cpp  (+6 more)
src/Animation/: SkeletalAnimation.h
src/Assimp/assimp/: metadata.h  types.h
src/Assimp/x64/Debug/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
src/Assimp/x64/Release/: assimp-vc142-mt.exp  assimp-vc142-mt.lib
src/Assimp/x86/Debug/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
src/Assimp/x86/Release/: assimp-vc142-mt.exp  assimp-vc142-mt.lib
src/Component/: BoxCollision.cpp  BoxCollision.hpp  Component.cpp  Component.hpp  DirectionalLight.cpp  DirectionalLight.hpp  Meshrender.cpp  Meshrender.hpp  PointLight.cpp  PointLight.hpp  Transform.cpp  Transform.hpp
src/GraphicEngine/: GLDebugDrawer.hpp
src/Xml/x64/Debug/: pugixml.lib
src/Xml/x64/Release/: pugixml.lib
src/Xml/x86/Debug/: pugixml.lib
src/Xml/x86/Release/: pugixml.lib
src/bullet3/BulletCollision/CollisionDispatch/: btCollisionObject.h
src/bullet3/include/LinearMath/: btTransform.h
src/bullet3/x64/Debug/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  BussIK_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  LinearMath_Debug.lib  OpenGLWindow_Debug.lib  clsocket_Debug.lib
src/bullet3/x64/Release/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletExampleBrowserLib.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletXmlWorldImporter.lib  BussIK.lib  ConvexDecomposition.lib  GIMPACTUtils.lib  HACD.lib  LinearMath.lib  OpenGLWindow.lib  clsocket.lib  gtest.lib
src/bullet3/x86/Debug/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletExampleBrowserLib_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletSoftBody_Debug.lib  BulletWorldImporter_Debug.lib  (+9 more)
src/glew/: glew32d.lib
src/glfw-3.3.bin.WIN64/lib-vc2017/: glfw3.lib
(+37 files in other folders)
